@@ -1,3 +1,4 @@
+- activate the scheduler
 - fix gplayer .play missing error
 - fix for default.py in STRM folder creation
 v0.1.10 (2018-03-14)
